# vee-new-architecture

./: .gitignore
common/: README.md  pyproject.toml
common/common/: models.py
common/common_pkg/: __init__.py  main.py
estimation-service/: README.md  pyproject.toml
estimation-service/app/: kafka_config.py  main.py
estimation-service/app/consumers/: __init__.py  blockload_consumer.py  profile_instant_consumer.py
estimation-service/app/models/: kafka_consumer.py
estimation-service/app/models/kafka_consumer/: consumer_config.py  consumer_factory.py  consumer_utility.py
estimation-service/app/router/: estimation_router.py
estimation-service/src/: main.py
estimation-service/src/models/: kafka_consumer.py
estimation-service/src/routes/: estimation_router.py
utility/: pyproject.toml
utility/utility_pkg/: __init__.py
utility/utility_pkg/kafka_consumer/: __init__.py  consumer.py  consumer_utility.py
utility/utility_pkg/kafka_producer/: producer.py
validation-service/: README.md  pyproject.toml
validation-service/app/: main.py
validation-service/app/router/: kafka_router.py  validation_router.py
validation-service/app/routes/: kafka_router.py  validation_router.py
validation-service/src/: main.py
validation-service/src/models/: kafka_producer.py
validation-service/src/routes/: kafka_router.py  validation_router.py
