[tool.poetry]
name = "utility"
version = "0.1.0"
description = "Shared models and utilities"
authors = ["Azhar <azhar@polarisgrids.com>"]
packages = [{ include = "utility_pkg", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.4"
confluent-kafka = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"