[tool.poetry]
name = "validation-service"
version = "0.1.0"
description = "Validation Service"
authors = ["Azhar <azhar@polarisgrids.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.11.4"
common = { path = "../common", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runserver = "uvicorn:run"